test/parser/decl_stmt.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:25: error: expected ';' after declaration
    let x: number = 0.0 |;

    // CHECK: [[# @LINE + 1 ]]:9: error: expected identifier
    mut ;

    // CHECK: [[# @LINE + 1 ]]:11: error: expected type specifier
    let x:;

    // CHECK: [[# @LINE + 1 ]]:20: error: expected expression
    let x: number =;

    mut x;
    // CHECK: DeclStmt:
    // CHECK-NEXT:   VarDecl: x

    let x: number;
    // CHECK: DeclStmt:
    // CHECK-NEXT:   VarDecl: x
    // CHECK-NEXT:     BuiltinType: number
    
    mut x: number = 1.0;
    // CHECK: DeclStmt:
    // CHECK-NEXT:   VarDecl: x
    // CHECK-NEXT:     BuiltinType: number
    // CHECK-NEXT:     NumberLiteral: '1.0'
}
